--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fonttools==4.47.0
 graphviz==0.20.1
 joblib==1.3.2
 kiwisolver==1.4.5
+lightgbm==4.2.0
 matplotlib==3.8.2
 numpy==1.26.2
 packaging==23.2
@@ -22,3 +23,4 @@ tenacity==8.2.3
 termcolor==2.4.0
 threadpoolctl==3.2.0
 tzdata==2023.3
+xgboost==2.0.3
